Hiding text on mobile, fixing sizes

--- a/stylesheets/modules/_header.scss
+++ b/stylesheets/modules/_header.scss
@@ -68,7 +68,7 @@ header {
     h2 {
       font-weight: $section_h2_font_weight;
       text-shadow: $section_h2_text_shadow;
-      font-size: 4em;
+      //font-size: 4em;
     }
   }
 }
@@ -92,7 +92,8 @@ header.secondary {
     h2 {
       font-weight: $section_h2_font_weight;
       text-shadow: $section_h2_text_shadow;
-	  font-size: 4em;
+	  //font-size: 4em;
     }
   }
 }
+.large { font-size: 4em; }
